k8s/apps/media/libreddit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreddit
  namespace: libreddit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: libreddit
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: libreddit
    spec:
      containers:
        - image: quay.io/redlib/redlib:latest
          imagePullPolicy: Always
          name: libreddit
          ports:
            - containerPort: 8080
