k8s/apps/media/libreddit/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: libreddit
  namespace: libreddit
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - "libreddit.vanillax.xyz"
  rules:
  - backendRefs:
    - name: libreddit
      port: 8080
